added the CSS and made changes to the HTML doc

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
       <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
-      <p>first Paragraph</p>
-      <p>Second Paragraph</p>
-      <p>Third Paragraph</p>
+    <div class="col-8">
+        <main>
+            <p>first Paragraph</p>
+                <article>
+                    <p>Second Paragraph</p>
+                    <p>Third Paragraph</p>
+                    <p>Forth Paragraph</p>
+                </article>
+                <article>
+                    <p>Fith Paragraph</p>
+                    <p>Six Paragraph</p>
+                    <p>Seventh Paragraph</p>
+                </article>
+            <p>Eighth Paragraph</p>
+        </main>
+    </div>
+    <div class="col-4">
+
+    </div>
+      <footer>
+        &copy; Javier Camacho
+      </footer>
    </body>
 </html>
