Finished UP the HTML and added some images

--- a/index.html
+++ b/index.html
@@ -4,24 +4,61 @@
       <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
+    <div class="row">
+        <div class="col-12">
+            <h1>Drones are becoming a bigger part of our world</h1>
+        </div>
+    </div>
+    <div class="row">
     <div class="col-8">
         <main>
-            <p>first Paragraph</p>
+            <p>As technology advances, so does our understanding of
+                how technology affects our lives. Now more than ever are we aquainted to 
+                life of instant gratification. But what if I told you drones, as great as
+                they are have some unintended consequences. In this article I will go over
+                how drones are affecting nature, privacy, and even innocent lives.
+            </p>
+            <h2>Drones affect nature</h2>
                 <article>
-                    <p>Second Paragraph</p>
-                    <p>Third Paragraph</p>
-                    <p>Forth Paragraph</p>
+                    <p>While drones are a great hobby the noise they make can be very 
+                        disorienting to local wildlife. 
+                    </p>
+                    <p>Not to mention drones actually hurt
+                        birds of prey like hawks that mistake them for smaller birds
+                        and end up getting hurt by its proppellers.
+                    </p>
+                    <p>Lastly the sound frequency the propelers of a drone make is very
+                        akin to the noise a wasp makes. this can scare off many pollonators
+                        like bees and butterflies reducing plant growth.
+                    </p>
                 </article>
+                <h2>Drones invade privacy and Human life</h2>
                 <article>
-                    <p>Fith Paragraph</p>
-                    <p>Six Paragraph</p>
-                    <p>Seventh Paragraph</p>
+                    <p>Drones offer a new way for people and goverments to invade privacy.
+                        their have many debates on if flying a drone above someones property 
+                        counts as tresspasing. some states have even created laws for these cases
+                    </p>
+                    <p>When you think of drones being killer death machines your first thought
+                        might be of the movie terminator. However UAV's or Unmanned Arial Vehicles 
+                        are essentially giant drones with missels. Because UAV's dont risk human life
+                        the US militarry uses them a lot more than soilders. The main issue with this 
+                        is the US millitary has had more civilian deaths during the time of UAV's than
+                        any other point in history.
+                    </p>
+                    <p>Drones also give another angle for people to counduct terrorist attacks.
+                        In fact about a year ago FBI had revoverd a kamakazi drone that was used
+                        to attack our power grids. the Original story can be found using 
+                        <a href="https://www.newscientist.com/article/2296480-drone-used-in-attack-on-us-electrical-grid-last-year-report-reveals/#:~:text=Drone%20used%20in%20attack%20on%20US%20electrical%20grid%20last%20year%2C%20report%20reveals&text=A%20modified%20consumer%20drone%20was,Security%20and%20National%20Counterterrorism%20Center.">This Link Here</a>
+                    </p>
                 </article>
-            <p>Eighth Paragraph</p>
+            <p>In conclusion while drones can be used to take great photos. They can also be used for great harm.</p>
         </main>
     </div>
     <div class="col-4">
-
+        <img src="Images/RecDrone.jpg" alt="Regular Drone">
+        <img src="Images/UAV.png" alt="UAV with missels">
+        <img src="Images/drone-critical-infrastructure-attack.jpg" alt="Drone Attack on the electrical Grid">
+    </div>
     </div>
       <footer>
         &copy; Javier Camacho
