Made some changed to make the site look nice

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <body>
     <h1>Drones are becoming a bigger part of our world</h1>
         <main>
-            <p>As technology advances, so does our understanding of
+            <p id="mainHeading">As technology advances, so does our understanding of
                 how technology affects our lives. Now more than ever are we aquainted to 
                 life of instant gratification. But what if I told you drones, as great as
                 they are have some unintended consequences. In this article I will go over
@@ -29,7 +29,7 @@
                 <img src="Images/RecDrone.jpg" alt="Regular Drone">
                 <h2>Drones invade privacy and Human life</h2>
                 <article>
-                    <p>Drones offer a new way for people and goverments to invade privacy.
+                    <p class="testP">Drones offer a new way for people and goverments to invade privacy.
                         their have many debates on if flying a drone above someones property 
                         counts as tresspasing. some states have even created laws for these cases
                     </p>
